# Python_Basics

./: .gitignore  README.md  calc.py  pokus.py
practice_final/01/: README.md
practice_final/01/src/demo_package.egg-info/: SOURCES.txt
practice_final/02/: README.md  pyproject.toml  requirements2.txt
practice_final/02/src/demo_package/: __main__.py
practice_final/02/src/demo_package.egg-info/: SOURCES.txt
practice_final/03_04/: Makefile  README.md  pyproject.toml  requirements.txt  survivors.xlsx
practice_final/03_04/config/: app.dev.yaml
practice_final/03_04/src/demo_package/: __main__.py  logs.py  utils.py
practice_final/03_04/src/demo_package.egg-info/: SOURCES.txt
practice_final/05/: README.md  pyproject.toml  requirements.txt
practice_final/05/src/demo_package/: __main__.py  cli.py  dataset.py  model.py
practice_final/05/src/demo_package.egg-info/: PKG-INFO  SOURCES.txt
practice_final/06/: README.md  pyproject.toml  requirements.txt
practice_final/06/src/demo_package/: utils.py
practice_final/06/src/demo_package.egg-info/: SOURCES.txt
practice_final/06/tests/: test_utils.py
