[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_package"
description = "Package for python course"
version = "0.1"

# this is a very important part
# it maps command "demo_package" to function "cli" in "demo_package.cli" module
# this allows us to not call only 'python -m demo_package', but also 'demo_package'
[project.scripts]
demo_package = "demo_package.cli:cli"